--- a/vars.env
+++ b/vars.env
@@ -2,4 +2,4 @@ EVENTSTORE_CLUSTER_SIZE=3
 EVENTSTORE_RUN_PROJECTIONS=All
 EVENTSTORE_DISCOVER_VIA_DNS=false
 EVENTSTORE_ENABLE_ATOM_PUB_OVER_HTTP=true
-EVENTSTORE_ADVERTISE_HOST_TO_CLIENT_AS=127.0.0.1
+# EVENTSTORE_ADVERTISE_HOST_TO_CLIENT_AS=127.0.0.1
